--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^1.0.1",
     "discord.js": "^14.8.0",
     "mysql": "^2.18.1",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "uuid": "^9.0.0"
   }
 }
